--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="background-overlay"></div>
     <div class="filter-video"></div> -->
     <header class="header mobi-main-body">
-        <img class="logo" src="./img/logo_ok9_white_pc.png" alt="OK9 - THỂ THAO XANH CHÍN">
+        <img class="logo" src="./img/logo_ok9_okvip.png" alt="OK9 - THỂ THAO XANH CHÍN">
     </header>
     <div class="main mobi-main-body">
         <div id="lineCtrl">
